--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
             "name": "CodeLens (Launch) - MeubelBackendApplication",
             "request": "launch",
             "mainClass": "com.bassiuz.meubel.MeubelBackendApplication",
-            "projectName": "heroku-demo"
+            "projectName": "MeubelBackend"
         }
     ]
 }
