--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.bassiuz</groupId>
-	<artifactId>heroku-demo</artifactId>
+	<artifactId>meubel-backend</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>heroku-demo</name>
-	<description>Demo project for Spring Boot</description>
+	<name>meubel-backend</name>
+	<description>Back-end to the website 'Meubels zijn net mensen'</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
