--- a/pom.xml
+++ b/pom.xml
@@ -35,11 +35,27 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-<dependency>
-    <groupId>org.jsoup</groupId>
-    <artifactId>jsoup</artifactId>
-    <version>1.8.3</version>
-</dependency>
+
+		 <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+            <version>5.2.4</version>
+        </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.197</version>
+        </dependency>
+		<dependency>
+  			<groupId>mysql</groupId>
+  			<artifactId>mysql-connector-java</artifactId>
+  			<version>5.1.6</version>
+		</dependency>
+		<dependency>
+    		<groupId>org.jsoup</groupId>
+ 		   <artifactId>jsoup</artifactId>
+   		 <version>1.8.3</version>
+		</dependency>
 
 	</dependencies>
 
