--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 server.port=${PORT:8080}
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.hikari.maximum-pool-size=2
+spring.jpa.hibernate.hikari.minimumIdle=1
